# docx-code-walker

./: LICENSE  README.md  pyproject.toml
src/docx_code_walker/: cli.py  document.py  file_handler.py
